Revert "Class io in libs-jmm now supports printing booleans"
This reverts commit 9e4bf9075a95522b66e1990b1f97f397d4a13de9.