@@ -32,7 +32,7 @@ public class io {
 						//System.out.println("valor lido: "+value);
 
 						if(!init) {
-							Buffer.addElement(Integer.valueOf(value));
+							Buffer.addElement(new Integer(value));
 						} else {
 							a = value;
 							init = false;
@@ -76,10 +76,6 @@ public class io {
 		System.out.print(a);
 	}
 
-    final static void print(boolean a) {
-		System.out.print(a);
-	}
-
 	final static void println() {
 		System.out.println();
 	}
@@ -93,10 +89,6 @@ public class io {
 	}
 
 	final static void println(String a) {
-		System.out.println(a);
-	}
-
-	final static void println(boolean a) {
 		System.out.println(a);
 	}	
 }
